# envtools

./: CMakeLists.txt  envremap.cpp  envremap.h  mipconvolution.py  sh.hpp
apps/: envconv.cpp  envtool.cpp  shascii.cpp  sherror.cpp  shimage.cpp  shtrans.cpp
discrete_sh/: sh.cpp  sh.h  shprojection.cpp  shprojection.h
image/: inout.cpp  inout.h
